--- a/trunk/ExampleProjects/Sakila.ServiceModel/Sakila.ServiceModel.csproj
+++ b/trunk/ExampleProjects/Sakila.ServiceModel/Sakila.ServiceModel.csproj
@@ -57,10 +57,45 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ModelInfo.cs" />
-    <Compile Include="Version100\Operations\SakilaService\StoreCustomer.cs" />
-    <Compile Include="Version100\Operations\SakilaService\StoreCustomersResponse.cs" />
-    <Compile Include="Version100\Operations\SakilaService\GetCustomers.cs" />
-    <Compile Include="Version100\Operations\SakilaService\GetCustomersResponse.cs" />
+    <Compile Include="Version100\Operations\SakilaDb4oService\GetAllCustomers.cs" />
+    <Compile Include="Version100\Operations\SakilaDb4oService\GetAllCustomersResponse.cs" />
+    <Compile Include="Version100\Operations\SakilaNHibernateService\GetCustomers.cs" />
+    <Compile Include="Version100\Operations\SakilaNHibernateService\GetCustomersResponse.cs" />
+    <Compile Include="Version100\Operations\SakilaNHibernateService\StoreCustomer.cs" />
+    <Compile Include="Version100\Operations\SakilaNHibernateService\StoreCustomerResponse.cs" />
+    <Compile Include="Version100\Operations\SakilaDb4oService\GetCustomers.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaDb4oService\GetCustomersResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaDb4oService\StoreCustomer.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaDb4oService\StoreCustomerResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaService\GetAllCustomers.cs" />
+    <Compile Include="Version100\Operations\SakilaService\GetAllCustomersResponse.cs" />
+    <Compile Include="Version100\Operations\SakilaService\GetCustomers.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaService\GetCustomersResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaService\GetFilms.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaService\GetFilmsResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaService\StoreCustomer.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Operations\SakilaService\StoreCustomerResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version100\Types\Actor.cs" />
     <Compile Include="Version100\Types\Address.cs" />
     <Compile Include="Version100\Types\ArrayOfGuidId.cs" />
     <Compile Include="Version100\Types\ArrayOfIntId.cs" />
@@ -69,6 +104,7 @@
     <Compile Include="Version100\Types\Country.cs" />
     <Compile Include="Version100\Types\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Version100\Types\Film.cs" />
     <Compile Include="Version100\Types\Properties.cs" />
     <Compile Include="Version100\Types\Property.cs" />
     <Compile Include="Version100\Types\ResponseError.cs" />
