--- a/trunk/ExampleProjects/ServiceStack.Sakila/ServiceStack.Sakila.ServiceInterface/ServiceStack.Sakila.ServiceInterface.csproj
+++ b/trunk/ExampleProjects/ServiceStack.Sakila/ServiceStack.Sakila.ServiceInterface/ServiceStack.Sakila.ServiceInterface.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceResolver.cs" />
     <Compile Include="Translators\ResponseStatusTranslator.cs" />
+    <Compile Include="Version100\GetFilmsPort.cs" />
     <Compile Include="Version100\StoreCustomerPort.cs" />
     <Compile Include="Version100\GetCustomersPort.cs">
       <SubType>Code</SubType>
