--- a/trunk/ExampleProjects/Sakila.ServiceModel/Sakila.ServiceModel.csproj
+++ b/trunk/ExampleProjects/Sakila.ServiceModel/Sakila.ServiceModel.csproj
@@ -57,60 +57,50 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ServiceModelFinder.cs" />
-    <Compile Include="Version100\Operations\SakilaDb4oService\GetAllCustomers.cs" />
-    <Compile Include="Version100\Operations\SakilaDb4oService\GetAllCustomersResponse.cs" />
-    <Compile Include="Version100\Operations\SakilaNHibernateService\GetAllCustomers.cs" />
-    <Compile Include="Version100\Operations\SakilaNHibernateService\GetAllCustomersResponse.cs" />
-    <Compile Include="Version100\Operations\SakilaNHibernateService\GetCustomers.cs" />
-    <Compile Include="Version100\Operations\SakilaNHibernateService\GetCustomersResponse.cs" />
-    <Compile Include="Version100\Operations\SakilaNHibernateService\StoreCustomer.cs" />
-    <Compile Include="Version100\Operations\SakilaNHibernateService\StoreCustomerResponse.cs" />
-    <Compile Include="Version100\Operations\SakilaDb4oService\GetCustomers.cs">
+    <Compile Include="Version100\Operations\GetAllCustomers.cs" />
+    <Compile Include="Version100\Operations\GetAllCustomersResponse.cs" />
+    <Compile Include="Version100\Operations\GetCustomers.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Version100\Operations\SakilaDb4oService\GetCustomersResponse.cs">
+    <Compile Include="Version100\Operations\GetCustomersResponse.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Version100\Operations\SakilaDb4oService\StoreCustomer.cs">
+    <Compile Include="Version100\Operations\GetFilms.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Version100\Operations\SakilaDb4oService\StoreCustomerResponse.cs">
+    <Compile Include="Version100\Operations\GetFilmsResponse.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Version100\Operations\SakilaService\GetAllCustomers.cs" />
-    <Compile Include="Version100\Operations\SakilaService\GetAllCustomersResponse.cs" />
-    <Compile Include="Version100\Operations\SakilaService\GetCustomers.cs">
+    <Compile Include="Version100\Operations\StoreCustomer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Version100\Operations\SakilaService\GetCustomersResponse.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Version100\Operations\SakilaService\GetFilms.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Version100\Operations\SakilaService\GetFilmsResponse.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Version100\Operations\SakilaService\StoreCustomer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Version100\Operations\SakilaService\StoreCustomerResponse.cs">
+    <Compile Include="Version100\Operations\StoreCustomerResponse.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Version100\Types\Actor.cs" />
     <Compile Include="Version100\Types\Address.cs" />
+    <Compile Include="Version100\Types\Address.generated.cs" />
     <Compile Include="Version100\Types\ArrayOfGuidId.cs" />
     <Compile Include="Version100\Types\ArrayOfIntId.cs" />
     <Compile Include="Version100\Types\ArrayOfStringId.cs" />
     <Compile Include="Version100\Types\City.cs" />
+    <Compile Include="Version100\Types\City.generated.cs" />
     <Compile Include="Version100\Types\Country.cs" />
+    <Compile Include="Version100\Types\Country.generated.cs" />
     <Compile Include="Version100\Types\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Version100\Types\Customer.generated.cs" />
     <Compile Include="Version100\Types\Film.cs" />
     <Compile Include="Version100\Types\Properties.cs" />
     <Compile Include="Version100\Types\Property.cs" />
     <Compile Include="Version100\Types\ResponseError.cs" />
     <Compile Include="Version100\Types\ResponseStatus.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sakila.DomainModel\Sakila.DomainModel.csproj">
+      <Project>{E6170756-E72D-4A0B-AF2F-9DFBE83F5C48}</Project>
+      <Name>Sakila.DomainModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
