--- a/trunk/Common/ServiceStack.Interfaces/ServiceStack.Translators/ServiceStack.Translators.csproj
+++ b/trunk/Common/ServiceStack.Interfaces/ServiceStack.Translators/ServiceStack.Translators.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5E11BF7F-BCD4-4111-883A-6C6B7F6752B4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{5C35EB8E-0314-4236-B142-B50FD154342B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceStack.Translators.Generator</RootNamespace>
-    <AssemblyName>ServiceStack.Translators.Generator</AssemblyName>
+    <RootNamespace>ServiceStack.Translators</RootNamespace>
+    <AssemblyName>ServiceStack.Translators</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Build\ServiceStack.Interfaces.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -49,13 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeDomUtils.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="TranslateMemberAttribute.cs" />
+    <Compile Include="TranslateModelAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Support\CommandLineSwitchAttribute.cs" />
-    <Compile Include="Support\CommandLineAliasAttribute.cs" />
-    <Compile Include="Support\Parser.cs" />
-    <Compile Include="CSharpTranslatorClassGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
