--- a/trunk/ExampleProjects/ServiceStack.SakilaDb4o/Sakila.ServiceModel/Sakila.ServiceModel.csproj
+++ b/trunk/ExampleProjects/ServiceStack.SakilaDb4o/Sakila.ServiceModel/Sakila.ServiceModel.csproj
@@ -102,6 +102,9 @@
       <Name>Sakila.DomainModel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="genetate-translators.bat" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
