--- a/trunk/ExampleProjects/ServiceStack.SakilaDb4o/Sakila.DomainModel/Sakila.DomainModel.csproj
+++ b/trunk/ExampleProjects/ServiceStack.SakilaDb4o/Sakila.DomainModel/Sakila.DomainModel.csproj
@@ -33,7 +33,11 @@
   <ItemGroup>
     <Reference Include="ServiceStack, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\ServiceStack.dll</HintPath>
+      <HintPath>..\..\Lib\ServiceStack.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Lib\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
