--- a/trunk/ProjectTemplates/import/import.db4o.properties
+++ b/trunk/ProjectTemplates/import/import.db4o.properties
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <properties>
 
-	<property name="in.domainModelNamespace" value="Sakila.DomainModel"/>
-	<property name="in.serviceModelNamespace" value="Sakila.ServiceModel"/>
-	<property name="in.serviceNamespace" value="ServiceStack.SakilaDb4oDemo"/>
-	<property name="in.serviceName" value="SakilaDb4oDemoService"/>
-	<property name="in.databaseName" value="Sakila"/>
-	<property name="in.modelName" value="Customer"/>
-	<property name="import.dir" value="C:\Projects\code.google\TemplateDemo\ServiceStack.SakilaDb4oDemo"/>
+	<property name="in.domainModelNamespace" value="Utopia.CardBilling.DomainModel"/>
+	<property name="in.serviceModelNamespace" value="Utopia.CardBilling.ServiceModel"/>
+	<property name="in.serviceNamespace" value="Utopia.CardBilling"/>
+	<property name="in.serviceName" value="CardBillingService"/>
+	<property name="in.databaseName" value="CardBilling"/>
+	<property name="in.modelName" value="CardHolderData"/>
+	<property name="import.dir" value="C:\Projects\PoToPe\trunk\webservices\src\Prototypes\Utopia.CardBilling"/>
 	<property name="deploy.dir" value="gen"/>
 
 </properties>
